# KeePassDiff

./: .gitignore  README.md  pyproject.toml  requirements.txt
KeePassDiff/: __init__.py  __main__.py  app.py  launch.py  main.py
KeePassDiff/components/: entry_modal.py
KeePassDiff/utils/: comparison.py  database.py
tests/: test_keepassdiff.py
tests/sample_databases/: a.kdbx  b.kdbx
